--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,16 @@ crate-type = [
 ]
 
 [dependencies]
-cosmwasm-std = { version = "2.0.3", features = ["staking"] }
+cosmwasm-std = { version = "1.0.0", features = [] }
 serde = { version = "1.0.202", default-features = false, features = ["derive"] }
-cw-storage-plus = "2.0.0"
+cw-storage-plus = "1.0.0"
 thiserror = "1"
 
 # schemars = "0.8.20"
-cosmwasm-schema = "2.0.3"
-# cw-utils = "2.0.0"
+cosmwasm-schema = "1.0.0"
+osmosis-std = "0.25.0"
+# osmosis-std-derive = "0.20.1"
+cw-utils = "2.0.0"
 
 [dev-dependencies]
 cw-multi-test = "2.0.1"
