--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = [
-    "cdylib",
-    # "rlib"
-]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 cosmwasm-std = { version = "1.0.0", features = [] }
