--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 [alias]
-wasm = "build --target wasm32-unknown-unknown --release"
-w = "build --target wasm32-unknown-unknown --release"
-wasm-debug = "build --target wasm32-unknown-unknown"
+wasm = "build --target wasm32-unknown-unknown --release --lib"
+w = "build --target wasm32-unknown-unknown --release --lib"
+wasm-debug = "build --target wasm32-unknown-unknown --lib"
 wd = "build --target wasm32-unknown-unknown"
 
