--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ thiserror = "1"
 # schemars = "0.8.20"
 cosmwasm-schema = "1.0.0"
 osmosis-std = "0.25.0"
-# osmosis-std-derive = "0.20.1"
 cw-utils = "1.0.0"
 
 cw20-base = { version = "1.1.2", features = ["library"] }
@@ -25,4 +24,5 @@ readonly = "0.2.12"
 
 [dev-dependencies]
 cw-multi-test = "1.0.0"
+osmosis-test-tube = "25.0.0"
 
