--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,22 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+
 cosmwasm-std = { version = "1.0.0", features = [] }
-serde = { version = "1.0.202", default-features = false, features = ["derive"] }
-cw-storage-plus = "1.0.0"
+serde_derive = "1.0.209"
+cw-storage-plus = "2.0.0"
 thiserror = "1"
 
 # schemars = "0.8.20"
-cosmwasm-schema = "1.0.0"
+cosmwasm-schema = "2.1.3"
 osmosis-std = "0.25.0"
-cw-utils = "1.0.0"
+cw-utils = "2.0.0"
 
-cw20-base = { version = "1.1.2", features = ["library"] }
-cw20 = "1.1.2"
+cw20-base = { version = "2.0.0", features = ["library"] }
+cw20 = "2.0.0"
 
 readonly = "0.2.12"
 
 [dev-dependencies]
-cw-multi-test = "1.0.0"
+cw-multi-test = "2.1.1"
 osmosis-test-tube = "25.0.0"
-
