--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 
-cosmwasm-std = { version = "1.0.0", features = [] }
+cosmwasm-std = { version = "2.1.3" }
 serde_derive = "1.0.209"
 cw-storage-plus = "2.0.0"
 thiserror = "1"
