--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,15 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-
-cosmwasm-std = { version = "2.1.3" }
+cosmwasm-std = { version = "2.1.3", features = ["staking"] }
 serde_derive = "1.0.209"
 cw-storage-plus = "2.0.0"
-thiserror = "1"
-
-# schemars = "0.8.20"
+thiserror = "1.0.56"
 cosmwasm-schema = "2.1.3"
-osmosis-std = "0.25.0"
+osmosis-std = { version = "0.25.0" }
 cw-utils = "2.0.0"
-
 cw20-base = { version = "2.0.0", features = ["library"] }
 cw20 = "2.0.0"
-
 readonly = "0.2.12"
 
 [dev-dependencies]
