--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ cw20-base = { version = "1.1.2", features = ["library"] }
 cw20 = "1.1.2"
 
 readonly = "0.2.12"
+anyhow = "1.0.89"
 
 [dev-dependencies]
 cw-multi-test = "1.2.0"
