--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build and run tests
 
 on:
   push:
@@ -18,5 +18,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+      
+  tests:
+    steps:  
     - name: Run tests
       run: cargo test --verbose
