--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
       run: cargo build --verbose
       
   tests:
+    runs-on: ubuntu-latest
     steps:  
     - name: Run tests
       run: cargo test --verbose
