--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Build and run tests
+name: Rust
 
 on:
   push:
@@ -11,9 +11,7 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Build
@@ -22,5 +20,6 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:  
+    - uses: actions/checkout@v4
     - name: Run tests
       run: cargo test --verbose
