--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,25 +2,27 @@ name: Build and run tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-      
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --verbose
+
   tests:
     runs-on: ubuntu-latest
-    steps:  
-    - name: Run tests
-      run: cargo test --verbose
+    steps:
+      - name: Run tests
+        run: |
+          rustup target add wasm32-unknown-unknown   
+          cargo build --target wasm32-unknown-unknown --release --lib
+          cargo test --verbose
