--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ once_cell = "1.19.0"
 [dev-dependencies]
 cw-multi-test = "1.2.0"
 osmosis-test-tube = "25.0.0"
+
+[profile.release]
+overflow-checks = true
