--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ serde = { version = "1.0.202", default-features = false, features = ["derive"] }
 cw-storage-plus = "1.2.0"
 thiserror = "1"
 
+# We make dev dependencies optional to also allow them during fuzzing #
+# cw-multi-test = { version = "1.2.0", optional = true } #
+osmosis-test-tube = { version = "25.0.0", optional = true }
+
 # schemars = "0.8.20"
 cosmwasm-schema = "1.5.7"
 osmosis-std = "0.25.0"
@@ -24,9 +28,11 @@ readonly = "0.2.12"
 anyhow = "1.0.89"
 once_cell = "1.19.0"
 
-[dev-dependencies]
-cw-multi-test = "1.2.0"
-osmosis-test-tube = "25.0.0"
-
 [profile.release]
 overflow-checks = true
+
+[features]
+fuzzing = ["osmosis-test-tube"]
+
+[dev-dependencies]
+osmosis-test-tube = "25.0.0"
