--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -9,13 +9,16 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
+osmosis-test-tube = "25.0.0"
 
 [dependencies.magma-core]
 path = ".."
+features = ["fuzzing"]
 
 [[bin]]
-name = "fuzz_target_1"
-path = "fuzz_targets/fuzz_target_1.rs"
+name = "rebalance"
+path = "fuzz_targets/rebalance.rs"
 test = false
 doc = false
 bench = false
+
